<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.youmengna.byr.SendMailActivity">

    <EditText
        android:id="@+id/recipientID"
        style="@style/black15"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/recipientID" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="5dp"
        android:background="@color/colorGray"></View>

    <EditText
        android:id="@+id/mailtheme"
        style="@style/black15"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/mailtheme" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="5dp"
        android:background="@color/colorGray"></View>

    <EditText
        android:id="@+id/mailcontent"
        style="@style/black15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:hint="@string/mailcontent" />

</LinearLayout>
