<?xml version="1.0" encoding="utf-8"?>
<com.youmengna.byr.colorUi.widget.ColorLinerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/login1">

        <ImageView
            android:id="@+id/MyheadImg"
            android:layout_width="65dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/cc" />

        <TextView
            android:id="@+id/Myaccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@+id/MyheadImg"
            android:text="linxicccccc"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/Myname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Myaccount"
            android:layout_marginTop="60dp"
            android:layout_toRightOf="@+id/MyheadImg"
            android:text="林夕"
            android:textColor="@color/colorWhite"
            android:textSize="17dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mailBoxll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/menu_mailbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mail" />
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/atmeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/menu_at" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/at" />
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorGray" />

        <LinearLayout
            android:id="@+id/replayll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/menu_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/replay" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:paddingLeft="10dp"
        android:text="操作" />

    <LinearLayout
        android:id="@+id/nightmodell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_mainboxll_btn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/mode_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="夜间模式"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/votell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_mainboxll_btn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/menu_vote" />

            <TextView
                android:id="@+id/voteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="投票"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setupll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_mainboxll_btn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/menu_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="设置"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"></View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_mainboxll_btn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_mainboxll_btn"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/menu_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="注销"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray"></View>
    </LinearLayout>
</com.youmengna.byr.colorUi.widget.ColorLinerLayout>
